@@ -1,4 +1,12 @@
-jvm.XX.UseSVE=0
+-server
+-agentpath:/usr/lib/trino/bin/libjvmkill.so
 -Xmx2G
 -XX:+UseG1GC
 -XX:G1HeapRegionSize=32M
+-XX:+ExplicitGCInvokesConcurrent
+-XX:+HeapDumpOnOutOfMemoryError
+-XX:+ExitOnOutOfMemoryError
+-XX:-OmitStackTraceInFastThrow
+-XX:ReservedCodeCacheSize=256M
+-Djdk.attach.allowAttachSelf=true
+-Djdk.nio.maxCachedBufferSize=2000000
